# Chromium-Webui-WithoutMojom

./: README.md
chrome/: chrome_paks.gni
chrome/browser/resources/hello/: BUILD.gn  hello.html  hello_resources.grd
chrome/browser/ui/webui/: BUILD.gn  chrome_web_ui_configs.cc
chrome/browser/ui/webui/hello/: BUILD.gn  hello_ui.cc  hello_ui.h  hello_untrusted_ui_config.h
tools/gritsettings/: resource_ids.spec
