import("//ui/webui/resources/tools/build_webui.gni")

assert(is_android || is_linux || is_chromeos || is_win)

build_webui("build") {
  grd_prefix = "hello"
  static_files = [ "hello.html" ]

  
  non_web_component_files = [ "hello.ts" ]
  ts_deps = [ "//ui/webui/resources/js:build_ts" ]
  

  webui_context_type = "trusted"
}
